[gd_scene load_steps=2 format=3 uid="uid://cpvts2f8nm7j2"]

[ext_resource type="Script" uid="uid://pljpasenv72p" path="res://Scripts/pause.gd" id="1_emv3i"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emv3i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -29.0
offset_right = 35.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MainContainer"]
process_mode = 3
layout_mode = 2
text = "Menu"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="DebugContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 138.0
offset_bottom = 64.0
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/DebugContainer"]
layout_mode = 2
text = "Debugging Menu"
fit_content = true

[node name="MainMenuButton" type="Button" parent="CanvasLayer/DebugContainer"]
layout_mode = 2
text = "Main Menu"

[node name="RhythmButton" type="Button" parent="CanvasLayer/DebugContainer"]
layout_mode = 2
text = "Rhythm"

[node name="DungeonButton" type="Button" parent="CanvasLayer/DebugContainer"]
layout_mode = 2
text = "Dungeon"
